[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Title/Buttons/ExitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/Exo2-SemiBoldExpanded.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Title/Buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/FadeIn/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Title/TitleScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 84
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
margin_left = 173.0
margin_right = 866.0
margin_bottom = 207.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 8
text = "POLYMONOUS
"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 211.0
margin_right = 1040.0
margin_bottom = 383.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1040.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 10.0
margin_bottom = 70.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 102.0
margin_bottom = 162.0

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 387.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "v0.1.0
Keaton Mueller"

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
